Funcionalidade - aviso de cookie

--- a/creditos.html
+++ b/creditos.html
@@ -156,7 +156,7 @@
 <!--Btn voltar  superior - desktop-->
 <div class="espaco-0-5"> </div>
     <div class="row menu-desktop">
-        <div id="btn-voltar-ms">
+        <div class="btn-voltar-ms">
          <a href="index.html">
             <img class="img-voltar" src="assets/img/nav/voltar.svg">
              </a>
