--- a/jogo.html
+++ b/jogo.html
@@ -13,13 +13,14 @@
     <link rel="stylesheet" href="assets/css/nivel.css">
     <link rel="stylesheet" href="assets/css/menu-modal.css">
     <link rel="stylesheet" href="assets/css/menu-desktop.css">
+    <link rel="stylesheet" href="assets/css/quit-modal.css">
     <link rel="stylesheet" href="assets/css/jogo.css">
     <link rel="stylesheet" href="assets/css/vitoria.css">
 
 </head>
 
 <body>
- <!-- menu Desktop - rodando perfeito -->
+ <!-- menu Desktop -->
 
      <div class="menu-desktop">
         <ul class="menu-desktop tipoUL">
@@ -81,7 +82,7 @@
         <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
             <div class="col menu-mobile col-lg-2 ajuste-direita">
                 <div id="btn-voltar-m">
-                    <a class = "menu-mobile"  href="index.html"> 
+                    <a class = "menu-mobile"> 
                         <img class="nav-elem menu-mobile"  id="logo-nav-sup-desktop" src="assets/img/nav/voltar.svg">
                     </a>
                 </div>
@@ -161,8 +162,6 @@
             <img class="img-voltar" src="assets/img/nav/voltar.svg">
         </div>
     </div>
-
-
 
 <!-- Fim opção sair --> 
 <!-- Opção sair - fazer o css - acho que ja ta feito - falta background  -->
@@ -268,6 +267,7 @@
             <p id="points" class="points"> 100 </p>
             <!--Arrumar aqui para o texto e a imagem ficarem alinhados-->
         </div>
+    
 
 <!--Fim  painel  -->
 
