Correção na funcionalidade de pontuação nas fases

--- a/index.html
+++ b/index.html
@@ -51,24 +51,23 @@
     <img class = "logo-eic-index" src="assets/img/logo-eic.svg">
     </div>
     <!--Aviso de cookies-->
-        <div id="cookies-container">
-            <div id="cookies-consent" class="">
-                <div class="espaco-3"></div> 
-                <div class="row">
-                    <div class="col col-lg-8">
-                    <p> Usamos cookies para melhorar a sua experiência. </p>
-                    <p> Clique <a href="cookies.html"><u> aqui </u><a> para entender porque usamos cookies. </p>
-                    </div>
-                    <div class="col col-lg-4">
-                    <!--Fazer uma nova classe para o botao esse modelo é grande e ficou feio aqui, no mobile-->
-                        <a> <div class="btn btn-dificil" id="btn-ok-cookies"> OK </div> </a> 
-                    </div>
+        <div id="cookies-consent" class="">
+            <div class="espaco-3"></div> 
+            <div class="row">
+                <div class="col col-lg-8">
+                <p> Usamos cookies para melhorar a sua experiência. </p>
+                <p> Clique <a href="cookies.html"><u> aqui </u><a> para entender porque usamos cookies. </p>
+                </div>
+                <div class="col col-lg-4">
+                <!--Fazer uma nova classe para o botao esse modelo é grande e ficou feio aqui, no mobile-->
+                    <a> <div class="btn btn-dificil" id="btn-ok-cookies"> OK </div> </a> 
                 </div>
             </div>
         </div>
  </div>
 
     <script src="assets/js/cookies.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
