--- a/nivel.html
+++ b/nivel.html
@@ -96,9 +96,9 @@
             </div>
     </div>
     
-<!--Menu modal que só aparece quando o botao-menu-modal é clicado, funcionando e aparecendo-->
+<!--Menu modal que só aparece quando o botao-menu-modal é clicado-->
+<!--Ainda não consegui fazer o efeito swipe, tentar de novo-->
 <div id="menu-modal" class="menu-mobile">
-    <div class="touch-surface"> </div>
     <ul class="list-modal">
          <li>
             <a href="index.html">
@@ -144,20 +144,20 @@
         </li>
     </ul>
     <div class="espaco-3"></div>
-    <div class="fade-menu-mobile menu-mobile"></div>
+   <div class="fade-menu-mobile menu-mobile"></div> 
 </div>
 
 <!--fim menu mobile-->
 
 <!--Btn voltar  superior - desktop-->
-<div class="espaco-0-5"> </div>
+<!--<div class="espaco-0-5"> </div>
     <div class="row menu-desktop">
         <div class="btn-voltar-ms">
        <a href="index.html">
             <img class="img-voltar" src="assets/img/nav/voltar.svg">
              </a>
         </div>
-    </div>
+    </div>-->
 
 <!-- Conteúdo da página -->
 
