Testes aviso de cookies

--- a/nivelteste.html
+++ b/nivelteste.html
@@ -79,13 +79,7 @@
 
 <!--menu modal - aparece quando clicado -->
 <div class="collapse" id="collapseMenuMobile">
-aaaaaaaaaaaaaaaaaaaaaaaaaaa
-   <div id="menu-modal">
-        <a class="nav-link active" href="#">Active</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-</div>
+<!-- não funciona -->
 </div>
 
   
