--- a/indexteste.html
+++ b/indexteste.html
@@ -16,6 +16,7 @@
 </head> 
 
 <body class = "fundo">
+
     <div class="espaco-1"></div>
     <div class="espaco-2"></div>
     <div class=" titulo">JOGO DA MEMÓRIA</div>
@@ -46,30 +47,36 @@
 
     <div class="espaco-3"></div>
     <div class="espaco-3"></div>
+    
 
     <div class="display-center">
     <img class = "logo-eic-index" src="assets/img/logo-eic.svg">
     </div>
-    <!--Aviso de cookies-->
-      <div id="cookies-consent text-cookies" class="0">
-            <div class="espaco-3"></div> 
+
+    <div class="toast cookies-consent"  data-autohide="false">
+        <div class="toast-body">
+            <p> Usamos cookies para melhorar a sua experiência. <p>
+            <p> Clique <a href="cookies.html"><u>aqui</u><a> para entender porque usamos cookies. </p>
             <div class="row">
-                <div class="text-cookies col col-lg-8">
-                <p> Usamos cookies para melhorar a sua experiência. </p>
-                <p> Clique <a href="cookies.html"><u> aqui </u><a> para entender porque usamos cookies. </p>
+                <div class="col col-lg-3">
+                    <a> <div class="btn btn-cookies" id="btn-ok-cookies"> OK </div> </a> 
                 </div>
-                <div class="text-cookies col col-lg-4">
-                <!--Fazer uma nova classe para o botao esse modelo é grande e ficou feio aqui, no mobile-->
-                    <a> <div class="btn btn-dificil text-cookies" id="btn-ok-cookies"> OK </div> </a> 
+                <div class="col col-lg-3">
+                    <a> <div class="btn btn-cookies" id="btn-ok-cookies"> OK </div> </a> 
                 </div>
             </div>
         </div>
- </div>
+    </div> 
  
+ </div>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-    <script src="assets/js/cookies.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/cookies.js"></script>
+
+ 
+   
+   
 </body>
 
 
