Aviso de cookies - não finalizado

--- a/indexteste.html
+++ b/indexteste.html
@@ -53,18 +53,18 @@
     <img class = "logo-eic-index" src="assets/img/logo-eic.svg">
     </div>
 
-    <div class="toast cookies-consent"  data-autohide="false">
+    <div id="cookie-warning" class="toast cookies-consent"  data-autohide="true">
         <div class="toast-body">
-            <p> Usamos cookies para melhorar a sua experiência. <p>
-            <p> Clique <a href="cookies.html"><u>aqui</u><a> para entender porque usamos cookies. </p>
             <div class="row">
-                <div class="col col-lg-3">
-                    <a> <div class="btn btn-cookies" id="btn-ok-cookies"> OK </div> </a> 
+                <div class="col col-lg-6">
+                <p> <br> Usamos cookies para melhorar a sua experiência. <p>
                 </div>
-                <div class="col col-lg-3">
+                <div class="col col-lg-6">
                     <a> <div class="btn btn-cookies" id="btn-ok-cookies"> OK </div> </a> 
                 </div>
             </div>
+            <br>
+        <p> Clique <a href="cookies.html"><u>aqui</u><a> para entender porque usamos cookies. </p>
         </div>
     </div> 
  
