problema - par correto - imagem par

--- a/jogo.html
+++ b/jogo.html
@@ -265,10 +265,11 @@
     <div class="card" id="card15">
         <div class="face back">  </div>
          <div class="face front">  </div>
-         
     </div>
-    <!--Perguntar sobre uma imagem melhor para colocar aqui-->
-     <img src="assets/img/match.png" id="imgMatchSing"/>
+
+     <!--Perguntar sobre uma imagem melhor para colocar aqui-->
+    <img src="assets/img/match.png" id="imgMatchSing" class="hideMatchSing"/> 
+    
     </div>
 
     <!--display de pontos -->
@@ -278,8 +279,7 @@
             <p id="points" class="points"> 100 </p>
             <!--Arrumar aqui para o texto e a imagem ficarem alinhados-->
         </div>
-
-<!--Fim  painel  -->
+    <!--Fim  painel  -->
 
     </div>
     <script src="assets/js/jquery.min.js"></script>
