--- a/vitoria.html
+++ b/vitoria.html
@@ -173,7 +173,7 @@
 
         <div class="row display-center" id ="DispBtns">
             <div class="col-lg-3">
-                    <a class="btn btn-primary btn-playAgain" href="jogo.html" id="again" onclick="fase(this.classList[3], this.classList[4])" > REFAZER FASE  </a>  
+                    <a class="btn btn-primary btn-playAgain pA:0" href="jogo.html" id="again" onclick="fase(this.classList[4], this.classList[5]); playAgain(this.classList[3])"> REFAZER FASE  </a>  
             </div>
             <div class="col-lg-2"></div>
             <div class="col-lg-3">
