Alteração desing - creditos

--- a/compartilhar.html
+++ b/compartilhar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title> Compartilhar - Jogo da memória</title>
+    <title> Compartilhar - Jogo da memória </title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
@@ -188,8 +188,8 @@
                 </div>
             </div>
         </div>
-         <!-- Whatsapp-->
 
+         <!-- Whatsapp-->
         <div class = "elem-btn-c">
             <div> 
                 <a href="https://api.whatsapp.com/send?text= Jogo da memória - Doença de chagas https://eic.ifsc.usp.br/app/jogo-da-memoria-chagas/index.html">
@@ -209,7 +209,9 @@
      </div>
 
      <div class="espaco-3"></div>
-     <div class="line display-center"></div>
+        <div class="container-line"> 
+            <div class="line display-center"></div>
+        </div>
      <div class="espaco-3"></div>
 
 
