--- a/creditos.html
+++ b/creditos.html
@@ -150,7 +150,6 @@
         <div class="espaco-3"></div>
         <div class="fade-menu-mobile menu-mobile"></div>
     </div>
-
 <!--fim menu mobile-->
 
 <!--Btn voltar  superior - desktop-->
@@ -163,10 +162,9 @@
         </div>
     </div>
     
-<!-- Conteúdo da página -->
+<!-- Conteúdo da página - desktop -->
     <div class="espaco-3"> </div>
-
-    <h1 class="subtitulo-2 titulo subtitulo-cre">CRÉDITOS</h1>
+    <div id="titulo-creditos-centro"> <h1 class="subtitulo-2  menu-desktop"> CRÉDITOS </h1> </div>
     <div class="espaco-3"></div>
     <!--Mostrar no desktop-->
     <div class="menu-desktop">
@@ -244,6 +242,8 @@
         <!--Mostrar no mobile-->
         <!--Não esta scrolando o conteudo-->
         <div class="menu-mobile" id="creditos-mobile">
+
+              <h1 class="subtitulo-2 titulo subtitulo-cre menu-mobile">CRÉDITOS</h1>
 
             <p class="destaque">COORDENAÇÃO GERAL </p>
             <p class="creditos"> Leila M. Beltramini </p>
