alterações fluxo do jogo

--- a/creditos.html
+++ b/creditos.html
@@ -243,7 +243,7 @@
         <!--Não esta scrolando o conteudo-->
         <div class="menu-mobile" id="creditos-mobile">
 
-              <h1 class="subtitulo-2 titulo subtitulo-cre menu-mobile">CRÉDITOS</h1>
+              <h1 class="subtitulo-2 menu-mobile">CRÉDITOS</h1>
 
             <p class="destaque">COORDENAÇÃO GERAL </p>
             <p class="creditos"> Leila M. Beltramini </p>
