--- a/jogopoo.html
+++ b/jogopoo.html
@@ -286,7 +286,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
-    <script src="assets/js/jogo.js"></script>
+    <script src="assets/js/jogopoo.js"></script>
 </body>
 
 </html>
