Hover menu lateral

--- a/compartilhar.html
+++ b/compartilhar.html
@@ -66,7 +66,7 @@
         <li class = "menu-desktop espaco-2"></li>
         <li>
             <a class="menu-desktop" href="compartilhar.html">
-            <div class="menu-desktop elem-menu-lateral active">
+            <div class="menu-desktop elem-menu-lateral">
             <img  class="menu-desktop" src="assets/img/compartilhar.svg">
             <p class="menu-desktop"> Compartilhar <p> 
             <div>
