--- a/cookies.html
+++ b/cookies.html
@@ -58,7 +58,7 @@
         <li class = "menu-desktop espaco-2"></li>
         <li>
             <a class="menu-desktop" href="compartilhar.html">
-            <div class="menu-desktop elem-menu-lateral active">
+            <div class="menu-desktop elem-menu-lateral">
             <img  class="menu-desktop" src="assets/img/compartilhar.svg">
             <p class="menu-desktop"> Compartilhar <p> 
             <div>
