Removemos o erro de somatorio na página de fim

--- a/vitoria.html
+++ b/vitoria.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/vitoria.css">
     <link rel="stylesheet" href="assets/css/menu-modal.css">
     <link rel="stylesheet" href="assets/css/menu-desktop.css">
+    
 
 </head>
 
@@ -181,9 +182,9 @@
         </div>
     </div>
 
-    <p id="points-fase1" class="score">0</p>
-    <p id="points-fase2" class="score">0</p>
-    <p id="points-fase3" class="score">0</p>
+    <p id="points-fase1" class="score"></p>
+    <p id="points-fase2" class="score"></p>
+    <p id="points-fase3" class="score"></p>
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
