botão Refazer Fase inutilizado; temporizador por nível e fase; caixa de pontuação final ok

--- a/fim.html
+++ b/fim.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/vitoria.css">
     <link rel="stylesheet" href="assets/css/menu-desktop.css">
     <link rel="stylesheet" href="assets/css/menu-modal.css">
-    
+    <link rel="stylesheet" href="assets/css/fim.css">
 </head>
 
 <body>
