--- a/vitoria.html
+++ b/vitoria.html
@@ -173,7 +173,7 @@
 
         <div class="row display-center" id ="DispBtns">
             <div class="col-lg-3">
-                    <a class="btn btn-primary btn-playAgain 0" href="jogo.html" id="again" onclick="playAgain(this.classList[3])"> REFAZER FASE  </a>  
+                    <a class="btn btn-primary btn-playAgain 0" id="again"> REFAZER FASE  </a>  
             </div>
             <div class="col-lg-2"></div>
             <div class="col-lg-3">
