--- a/fim.html
+++ b/fim.html
@@ -183,7 +183,7 @@
 
         <div class="hideProx">
             <div class="col">
-                <a class="btn btn-primary btn-facil" href="jogo.html" id="prox" onclick="fase(classList[3], '1')" /> PRÓXIMO NÍVEL </a> 
+                <a class="btn btn-primary btn-facil" href="jogo.html" id="prox" onclick="fase(classList[3], '1')" > PRÓXIMO NÍVEL </a> 
             </div>
         </div>
     </div>
