criamos a página de Login

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img src="assets/img/cards-img.svg" class="cards-inicial">
     <div class="espaco-3"></div>
     <div class="row">
-        <div class="col"><a class="btn btn-primary" href="nivel.html"> INICIAR </a></div>
+        <div class="col"><a class="btn btn-primary" href="login.html" id="login"> LOGIN </a></div>
     </div>
     <div class="espaco-2"></div>
 
@@ -74,6 +74,7 @@
     <script src="assets/js/cookies.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 
 
