--- a/cadastrar.html
+++ b/cadastrar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Login - Jogo da memória</title>
+    <title>Cadastrar - Jogo da memória</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
@@ -68,20 +68,23 @@
         </li>
         </ul>
     </div>
-    <div class="fundo">
-        <div>
-         <p class="subtitulo-3" id="titulo-entrar">ENTRAR</p>   
-        </div>
-       <form >
-        <input class="inputs-container" value="" placeholder="Digite seu nome de usuário">
-       </form>
-       <form>
-        <input class="inputs-container" type="password" placeholder="Digite sua senha">
-       </form>
-       <a href="nivel.html"><p id="reset">Esqueceu Sua Senha?</p></a>
-       <div class="btn btn-primary btn-entrar" ><a href="nivel.html">ENTRAR</a></div>
-       <a id="cadastro" href="cadastrar.html"><p>Cadastre-se</p></a>
-    </div>
-    <script src="assets/js/index.js"></script>
+
+<div class="fundo">
+<div>
+        <p class="subtitulo-3" id="titulo-cadastrar">CADASTRAR</p>
+</div>
+<div class="pgn-cadastrar">
+    <label class="label1">Nome</label>
+    <input class="inputs-container" id="nome-cadastrar" placeholder="Ex: Fulana de Tal">
+    <label class="label1">Escolha uma senha</label>
+    <input class="inputs-container" type="password"value="" placeholder="Ex: S3Nha F0Rt3">
+</div>
+<div class=pgn-cadastrar>
+    <label class="label1">E-mail</label>
+    <input class="inputs-container" placeholder="Ex: email@email.com">
+    <label class="label1">Confirme sua senha</label>
+    <input class="inputs-container" type="password" placeholder="Ex: S3Nha F0Rt3 ">
+</div>
+<div class="btn btn-primary btn-pronto" ><a href="login.html">PRONTO</a></div>
 </body>
 </html>
