--- a/cookies.html
+++ b/cookies.html
@@ -22,7 +22,7 @@
         <li class = "espaco-6 menu-desktop"></li>
         <li> <!--Colocar o logo no centro-->
             <a class="menu-desktop" href="index.html"> 
-                <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.png">
+                <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.svg">
             </a>
         </li>
         <li class = "menu-desktop espaco-6"></li>
