--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
     <div class="espaco-2"></div>
     <img src="assets/img/cards-img.svg" class="cards-inicial">
     <div class="espaco-3"></div>
-    <div class="row">
-        <div class="col"><a class="btn btn-primary" href="login.html" id="login"> LOGIN </a></div>
+    <!---<div class="row">
+        <div class="col"><a class="btn btn-primary" href="login.html" id="login"> LOGIN </a></div>--->
+    </div>
+    <form >
+     <input class="inputs-container" id="usuario" value="" placeholder="Digite seu nome de usuário">
+     <input class="inputs-container" id="senha" type="password" placeholder="Digite sua senha">
+     <div class="btn btn-primary btn-entrar" ><a href="nivel.html">ENTRAR</a></div>
+    </form>
+    <a href="nivel.html"><p id="reset">Esqueceu Sua Senha?</p></a>
+    
+    
+    </div>
     </div>
     <div class="espaco-2"></div>
 
@@ -43,6 +53,10 @@
         <div> <a href="compartilhar.html"> <img src="assets/img/botao-compartilhar.svg"> </a></div>
         </div>
      </div>
+
+    <div>
+        <a href="cadastrar.html"><p id="cadastro">Cadastre-se</p></a>
+    </div>
 
     <div class="espaco-3"></div>
     <div class="espaco-3"></div>
