--- a/vitoria.html
+++ b/vitoria.html
@@ -25,7 +25,7 @@
         <li class = "espaco-6 menu-desktop"></li>
         <li> <!--Colocar o logo no centro-->
             <a class="menu-desktop" href="index.html"> 
-                <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.png">
+                <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.svg">
             </a>
         </li>
         <li class = "menu-desktop espaco-6"></li>
@@ -105,7 +105,7 @@
          <li>
             <a href="index.html">
             <div class= "logo-modal">
-            <img class="tamanho-logo-modal" src="assets/img/logo-eic-branco.png">
+            <img class="tamanho-logo-modal" src="assets/img/logo-eic-branco.svg">
             <div>
             </a>
         </li>
