--- a/nivel.html
+++ b/nivel.html
@@ -133,7 +133,6 @@
             </a>
         </li>
          <li><div class="espaco-1"></div></li>
-         <li>
             <a href="compartilhar.html">
             <div class= "elem-menu-modal">
             <img class="tamanho-img-modal" src="assets/img/compartilhar.svg">
@@ -142,6 +141,7 @@
             </a>
         </li>
     </ul>
+    
     <div class="espaco-3"></div>
    <div class="fade-menu-mobile menu-mobile"></div> 
 </div>
@@ -161,6 +161,11 @@
 <!-- Conteúdo da página -->
 
     <div class="espaco-3"> </div>
+    <div id ="loguinForm"> </div> 
+    <div id ="cadForm-form"> </div>
+    <div id ="loguin-Google"> </div>
+    <div class="card-header"></div>
+    <div class="card-body">
 
     <h1 class="subtitulo-2">ESCOLHA UM NÍVEL</h1>
     <div class="espaco-6"></div>
@@ -186,14 +191,21 @@
             <a class="btn btn-primary btn-dificil 1" id="dificil" href="instrucoes.html"  onclick="fase(this.id, classList[3])"> DÍFICIL </a>
             </div>
         </div>
-
+        <div class="espaco-6"></div>
+        <div class="col">
+        <!--
+        <button type="submit" id="logout-Action"  class="btn btn-primary">
+            Sair
+        </button>
+        -->
+        </div>
 </div>
      
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
     <script src="assets/js/nivel.js"></script>
-
+    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
