Login e cadastro implementados - algumas estilizações fora do contexto

--- a/cadastrar.html
+++ b/cadastrar.html
@@ -76,9 +76,14 @@
             <p class="subtitulo-3" id="titulo-cadastrar">CADASTRAR</p>
         </div>
 
-        <div>
+        <!--<div>
             <label class="label1">Nome</label>
             <input class="inputs-container" id="nome-cadastrar" placeholder="Ex: Fulana de Tal">
+        </div>-->
+        
+        <div>
+            <label class="label1">E-mail</label>
+            <input class="inputs-container" type="text" id="email" name="email" placeholder="Ex: email@email.com" required autofocus>
         </div>
 
         <div>
@@ -87,12 +92,8 @@
         </div>
 
         <div>
-            <label class="label1">E-mail</label>
-            <input class="inputs-container" type="text" id="email" name="email" placeholder="Ex: email@email.com" required autofocus>
-        </div>
-        <div>
             <label class="label1">Confirme sua senha</label>
-            <input class="inputs-container" type="password" placeholder="Ex: S3Nha F0Rt3 ">
+            <input class="inputs-container" type="password"  name="password2">
         </div>
 
         <div>
