--- a/index.html
+++ b/index.html
@@ -25,13 +25,18 @@
     <div class="espaco-2"></div>
     <img src="assets/img/cards-img.svg" class="cards-inicial">
     <div class="espaco-3"></div>
-    <!---<div class="row">
-        <div class="col"><a class="btn btn-primary" href="login.html" id="login"> LOGIN </a></div>--->
-    </div>
+    <!--<div class="row">
+        <div class="col"><a class="btn btn-primary" href="login.html" id="login"> LOGIN </a></div>
+    </div>-->
     <form id="loguinForm" action="#" method="post">
 
-     <input type="text" id="email" name="email"class="inputs-container" placeholder="Digite seu e-mail">
-     <input class="inputs-container" id="password" name="password" type="password" placeholder="Digite sua senha">
+        <div>
+            <input type="text" id="email"  class="inputs-container" name="email" placeholder="Digite seu e-mail" required autofocus>
+        </div>
+
+        <div >
+            <input type="password" id="password" class="inputs-container" name="password" placeholder="Digite sua senha" required>
+        </div>
     
      <button class="btn btn-primary" id="" type="submit">Entrar</button>
 
@@ -57,13 +62,12 @@
         <div class = "elem-btn-c">
         <div> <a href="compartilhar.html"> <img src="assets/img/botao-compartilhar.svg"> </a></div>
         </div>
-     </div>
-
-    <div>
-        <a href="cadastrar.html"><p id="cadastro">Cadastre-se</p></a>
     </div>
 
-    <div class="espaco-3"></div>
+    <div>
+    <a href="cadastrar.html"><p id="cadastro">Cadastre-se</p></a>
+    </div>
+
     <div class="espaco-3"></div>
 
     <div class="display-center">
