Correção dos styles do mobile no menu iniciar

--- a/fim.html
+++ b/fim.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/menu-desktop.css">
     <link rel="stylesheet" href="assets/css/menu-modal.css">
     <link rel="stylesheet" href="assets/css/fim.css">
+    <link rel="stylesheet" href="assets/css/index.css">
 </head>
 
 <body>
@@ -152,11 +153,11 @@
 
         <!--Conteudo da pagina -->
         <div class="espaco-3"></div>
-        <div id="trofeu">
-        <img src="assets/img/trofeu.png">
+        <div id="raking">
+        <h1 class="subtitulo-3">PONTUAÇÃO GERAL</h1>
+        <img id= "trofeu-rkn" src="assets/img/trofeu.png">
         </div>
         <div class="espaco-3"></div>
-        <h1 class="titulo"> PARABÉNS! </h1>
         <div class="espaco-1"></div>
         <h3 class="subtitulo-tam"> Você completou todas as fases! Sua pontuação total foi: </h3>
         <div class="espaco-1"></div>
