--- a/nivel.html
+++ b/nivel.html
@@ -64,6 +64,14 @@
             <div>
             </a>
         </li>
+        <li>
+            <a href="index.html" type="submit" id="logout-Action">
+                <div class="menu-desktop elem-menu-lateral">
+                    <img  class="menu-desktop" src="assets/img/">
+                    <p>Sair</p>
+                </div>
+            </a>
+        </li>
         </ul>
     </div>
     <!--Fim menu desktop -->
@@ -133,6 +141,7 @@
             </a>
         </li>
          <li><div class="espaco-1"></div></li>
+         <li>
             <a href="compartilhar.html">
             <div class= "elem-menu-modal">
             <img class="tamanho-img-modal" src="assets/img/compartilhar.svg">
@@ -186,13 +195,6 @@
         </div>
         <div class="espaco-6"></div>
         
-        <div>
-        <a href="index.html">
-        <button type="submit" id="logout-Action" class="btn btn-primary">
-            Sair
-        </button>
-        </a>
-        </div> 
         <div id ="loguinForm"> </div> 
         <div id ="cadForm-form"> </div>
         <div id ="loguin-Google"> </div>
