Algumas correções e prévia do ranking

--- a/fim.html
+++ b/fim.html
@@ -153,33 +153,47 @@
 
         <!--Conteudo da pagina -->
         <div class="espaco-3"></div>
-        <div id="raking">
-        <h1 class="subtitulo-3">PONTUAÇÃO GERAL</h1>
+        <div>
+        <h1 class="subtitulo-4">PONTUAÇÃO GERAL</h1>
         <img id= "trofeu-rkn" src="assets/img/trofeu.png">
         </div>
         <div class="espaco-3"></div>
         <div class="espaco-1"></div>
-        <h3 class="subtitulo-tam"> Você completou todas as fases! Sua pontuação total foi: </h3>
+        <!--
+        <h3 class="subtitulo-tam"> Você completou todas as fases! Sua pontuação total foi: </h3>-->
         <div class="espaco-1"></div>
+
+        <div class="ranking" id="ranking1">
+            1-Fulano..................................................
+        </div>
+        <p id="final-score" class="points"></p>
+        <div class="ranking">
+
+        </div>
+        <div class="ranking">
+
+        </div>
+        <div class="ranking">
+
+        </div>
+            <!--
            <div class="display-center">
             <div id="points-box" class="points-box">
                 <img  class="medal" src="assets/img/medalha.svg">
-                <p id="final-score" class="points"></p>
-                <!--Arrumar aqui para o texto e a imagem ficarem alinhados-->
-            </div>
-        </div>
+                
+            </div>-->
         <div class="espaco-3"></div>
-
+        
         <div class="col">
             <a class="btn btn-primary btn-medio" href="index.html" id="inicio" > INÍCIO  </a>  
         </div>
 
+        <!--
         <div class="espaco-1"></div>
 
         <div class="col">
             <a class="btn btn-primary btn-dificil" href="compartilhar.html" id="share" > COMPARTILHAR </a> 
         </div>
-
          <div class="espaco-1"></div>
 
         <div class="hideProx">
@@ -187,6 +201,7 @@
                 <a class="btn btn-primary btn-facil" href="jogo.html" id="prox" onclick="fase(classList[3], '1')" > PRÓXIMO NÍVEL </a> 
             </div>
         </div>
+        -->
     </div>
 
     <script src="assets/js/jquery.min.js"></script>
