--- a/nivel.html
+++ b/nivel.html
@@ -149,10 +149,19 @@
             <div>
             </a>
         </li>
+        <li><div class="espaco-1"></div></li>
+        <li>
+            <a href="index.html" type="submit" id="logout-Action">
+                <div class="elem-menu-modal">
+                    <img  class="menu-desktop" src="assets/img/">
+                    <p>Sair</p>
+                </div>
+            </a>
+        </li>
     </ul>
     
-    <div class="espaco-3"></div>
-   <div class="fade-menu-mobile menu-mobile"></div> 
+   <div class="fade-menu-mobile menu-mobile"></div>  
+   
 </div>
 
 <!--fim menu mobile-->
