--- a/nivel.html
+++ b/nivel.html
@@ -65,7 +65,7 @@
             </a>
         </li>
         <li>
-            <a href="index.html" type="submit" id="logout-Action">
+            <a type="submit" id="logout-Action">
                 <div class="menu-desktop elem-menu-lateral">
                     <img  class="menu-desktop" src="assets/img/">
                     <p>Sair</p>
@@ -151,7 +151,7 @@
         </li>
         <li><div class="espaco-1"></div></li>
         <li>
-            <a href="index.html" type="submit" id="logout-Action">
+            <a type="submit" id="logout-Action-modal">
                 <div class="elem-menu-modal">
                     <img  class="menu-desktop" src="assets/img/">
                     <p>Sair</p>
