--- a/jogo.html
+++ b/jogo.html
@@ -69,6 +69,14 @@
             <div>
             </a>
         </li>
+        <li>
+            <a id="logout-Action">
+                <div class="menu-desktop elem-menu-lateral">
+                    <img  class="menu-desktop" src="assets/img/">
+                    <p type="submit" class="menu-desktop">Sair</p>
+                </div>
+            </a>
+        </li>
         </ul>
     </div>
 
@@ -145,6 +153,14 @@
             <img class="tamanho-img-modal" src="assets/img/compartilhar.svg">
             <p> Compartilhar <p> 
             <div>
+            </a>
+        </li>
+        <li>
+            <a id="logout-Action-modal">
+            <div class="elem-menu-modal">
+            <img  class="tamanho-img-modal" src="assets/img/">
+            <p>Sair</p>
+            </div>
             </a>
         </li>
     </ul>
@@ -282,11 +298,17 @@
     <!--Fim  painel  -->
 
     </div>
+    <div id ="loguinForm"> </div> 
+    <div id ="cadForm-form"> </div>
+    <div id ="loguin-Google"> </div>
+    <div class="card-body">
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
     <script src="assets/js/jogo.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
