--- a/nivel.html
+++ b/nivel.html
@@ -67,8 +67,8 @@
         <li>
             <a type="submit" id="logout-Action">
                 <div class="menu-desktop elem-menu-lateral">
-                    <img  class="menu-desktop" src="assets/img/">
-                    <p>Sair</p>
+                    <img  class="menu-desktop" src="assets/img/sair.svg">
+                    <p class="menu-desktop">Sair</p>
                 </div>
             </a>
         </li>
@@ -152,10 +152,10 @@
         <li><div class="espaco-1"></div></li>
         <li>
             <a type="submit" id="logout-Action-modal">
-                <div class="elem-menu-modal">
-                    <img  class="menu-desktop" src="assets/img/">
-                    <p>Sair</p>
-                </div>
+            <div class="elem-menu-modal">
+            <img  class="tamanho-img-modal" src="assets/img/sair.svg">
+            <p>Sair</p>
+            </div>
             </a>
         </li>
     </ul>
