Alguns ajustes para melhor funcionamento

--- a/fim.html
+++ b/fim.html
@@ -71,7 +71,7 @@
         <li>
             <a id="logout-Action" class="menu-desktop" href="index.html">
                 <div class="menu-desktop elem-menu-lateral">
-                    <img  class="menu-desktop" src="assets/img/">
+                    <img  class="menu-desktop" src="assets/img/sair.svg">
                     <p class="menu-desktop">Sair</p>
                 </div>
             </a>
@@ -157,7 +157,7 @@
         <li>
             <a type="submit" id="logout-Action-modal" href="index.html">
                 <div class="elem-menu-modal">
-                    <img  class="tamanho-img-modal" src="assets/img/">
+                    <img  class="tamanho-img-modal" src="assets/img/sair.svg">
                     <p>Sair</p>
                 </div>
             </a>
