--- a/nivel.html
+++ b/nivel.html
@@ -30,7 +30,7 @@
         <a href=" menu-desktop index.html"> </a>
 
         <li class="menu-desktop">
-            <a href="index.html">
+            <a href="nivel.html">
             <div class=" menu-desktop elem-menu-lateral">
             <img  class ="menu-desktop alinhamento" src="assets/img/home.svg">
             <p class="menu-desktop"> Início <p> 
@@ -115,7 +115,7 @@
             </a>
         </li>
         <li>
-            <a href="index.html">
+            <a href="nivel.html">
             <div class= "elem-menu-modal">
             <img class="tamanho-img-modal" src="assets/img/home.svg">
             <p> Início <p> 
@@ -214,10 +214,11 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
-    <script src="assets/js/nivel.js"></script>
     
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
+
+    <script src="assets/js/nivel.js"></script>
     <script src="assets/js/index.js"></script>
 </body>
 
