--- a/jogo.html
+++ b/jogo.html
@@ -70,9 +70,9 @@
             </a>
         </li>
         <li>
-            <a id="logout-Action">
+            <a type="submit" id="logout-Action">
                 <div class="menu-desktop elem-menu-lateral">
-                    <img  class="menu-desktop" src="assets/img/">
+                    <img  class="menu-desktop" src="assets/img/sair.svg">
                     <p type="submit" class="menu-desktop">Sair</p>
                 </div>
             </a>
@@ -158,7 +158,7 @@
         <li>
             <a id="logout-Action-modal">
             <div class="elem-menu-modal">
-            <img  class="tamanho-img-modal" src="assets/img/">
+            <img  class="tamanho-img-modal" src="assets/img/sair.svg">
             <p>Sair</p>
             </div>
             </a>
@@ -308,7 +308,12 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
     <script src="assets/js/jogo.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
+    
     <script src="assets/js/index.js"></script>
+   
 </body>
 
 </html>
