--- a/jogo.html
+++ b/jogo.html
@@ -69,11 +69,12 @@
             <div>
             </a>
         </li>
+        <li class = "menu-desktop espaco-2"></li>
         <li>
-            <a type="submit" id="logout-Action">
-                <div class="menu-desktop elem-menu-lateral">
+            <a id="logout-Action" class="menu-desktop">
+                <div type="submit" class="menu-desktop elem-menu-lateral">
                     <img  class="menu-desktop" src="assets/img/sair.svg">
-                    <p type="submit" class="menu-desktop">Sair</p>
+                    <p class="menu-desktop">Sair</p>
                 </div>
             </a>
         </li>
