--- a/nivel.html
+++ b/nivel.html
@@ -64,9 +64,10 @@
             <div>
             </a>
         </li>
+        <li class = "menu-desktop espaco-2"></li>
         <li>
-            <a type="submit" id="logout-Action">
-                <div class="menu-desktop elem-menu-lateral">
+            <a id="logout-Action">
+                <div  type="submit" class="menu-desktop elem-menu-lateral">
                     <img  class="menu-desktop" src="assets/img/sair.svg">
                     <p class="menu-desktop">Sair</p>
                 </div>
