--- a/fim.html
+++ b/fim.html
@@ -69,8 +69,8 @@
             </a>
         </li>
         <li>
-            <a id="logout-Action" class="menu-desktop" href="index.html">
-                <div class="menu-desktop elem-menu-lateral">
+            <a id="logout-Action" class="menu-desktop">
+                <div  type="submit" class="menu-desktop elem-menu-lateral">
                     <img  class="menu-desktop" src="assets/img/sair.svg">
                     <p class="menu-desktop">Sair</p>
                 </div>
@@ -155,7 +155,7 @@
             </a>
         </li>
         <li>
-            <a type="submit" id="logout-Action-modal" href="index.html">
+            <a type="submit" id="logout-Action-modal">
                 <div class="elem-menu-modal">
                     <img  class="tamanho-img-modal" src="assets/img/sair.svg">
                     <p>Sair</p>
@@ -205,11 +205,6 @@
         <div class="col">
             <a class="btn btn-primary btn-medio" href="index.html" id="inicio" > INÍCIO  </a>  
         </div>
-        
-        <div id ="loguinForm"> </div> 
-        <div id ="cadForm-form"> </div>
-        <div id ="loguin-Google"> </div>
-        <div class="card-body">
         <!--
         <div class="espaco-1"></div>
 
@@ -225,6 +220,10 @@
         </div>
         -->
     </div>
+    <div id ="loguinForm"> </div> 
+    <div id ="cadForm-form"> </div>
+    <div id ="loguin-Google"> </div>
+    <div class="card-body">
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
