acertamos bugs (pontos e loop)

--- a/jogo.html
+++ b/jogo.html
@@ -217,7 +217,7 @@
   
 <!-- Painel ensinando como jogar -->
 
-<div id="container" class="d-flex flex-row"> 
+<div id="container" class="flex-row"> 
 
     <div class="card" id="card0">
         <div class="face back">  </div>
