--- a/vitoria.html
+++ b/vitoria.html
@@ -216,6 +216,7 @@
 
     <script src="assets/js/nivel.js"></script>
     <script src="assets/js/index.js"></script>
+    <script src="assets/js/vitoria.js"></script>
     
     
 </body>
