--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
 </head> 
 
-<body class = "fundo">
+<body class = "fundo container">
     <div class="espaco-1"></div>
     <div class="espaco-2"></div>
     <div class=" titulo">JOGO DA MEMÓRIA</div>
