--- a/vitoria.html
+++ b/vitoria.html
@@ -197,15 +197,15 @@
             </div>
         </div>
     </div>
-     
-    <div id ="loguinForm"> </div> 
-    <div id ="cadForm-form"> </div>
-    <div id ="loguin-Google"> </div>
-    <div class="card-body">
 
     <p id="points-fase1" class="score"></p>
     <p id="points-fase2" class="score"></p>
     <p id="points-fase3" class="score"></p>
+
+    <div id ="loguinForm"> </div> 
+    <div id ="cadForm-form"> </div>
+    <div id ="loguin-Google"> </div>
+    <div class="card-body">
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -214,6 +214,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
 
+    <script src="assets/js/vitoria.js"></script>
     <script src="assets/js/nivel.js"></script>
     <script src="assets/js/index.js"></script>
     
